@@ -3,3 +3,5 @@ Tests ClosureCompilerSourceMapping.
 
 Running: testSimpleMapping
 
+Running: testNoMappingEntry
+
