@@ -1,3 +1,13 @@
+2011-10-12  Pavel Podivilov  <podivilov@chromium.org>
+
+        Web Inspector: fix handling of source mapping entries with no mapping.
+        https://bugs.webkit.org/show_bug.cgi?id=69941
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/debugger/compiler-source-mapping-expected.txt:
+        * inspector/debugger/compiler-source-mapping.html:
+
 2011-10-17  Kent Tamura  <tkent@chromium.org>
 
         [Chromium] Update test expectations for r97596 and r97602.
